fix bg color when dark mode is on

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -67,3 +67,8 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+.dark body{
+  background-color:#111827;
+}
